<resources>
    <string name="app_name">ChapinLeads</string>
    <!-- Facebok SDK -->
    <string name="facebook_app_id">178875882956239</string>
    <string name="fb_login_protocol_scheme">fb178875882956239</string>
    <string name="fb_btn_login">Iniciar sesión con Facebook</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_password">Contraseña</string>
    <string name="confirm_password">Confirme contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_failed">Error al iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="register_new_account">Crear cuenta</string>
    <string name="register_new_account_success">Su cuenta ha sido creada.</string>
    <string name="error_invalid_email">Correo electrónico inválido.</string>
    <string name="error_invalid_password">Contraseña muy corta.</string>
    <string name="error_incorrect_password">Contraseña incorrecta.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_recommendations">Recomendaciones</string>
    <string name="title_my_leads">Mis Leads</string>
    <string name="title_settings">Configuración</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_search">Buscar</string>
    <string name="action_share">Compartir</string>
    <string name="lead_update_error">Error al actualizar tus leads.</string>
    <string name="new_lead_image">Imagen</string>
    <string name="new_lead_take_photo">Tomar foto</string>
    <string name="new_lead_choose_photo">Escoger</string>
    <string name="new_lead_title">Nombre</string>
    <string name="new_lead_details">Detalles</string>
    <string name="new_lead_category">Categoría</string>
    <string name="new_lead_add">Crear Lead</string>
    <string name="new_lead_error_in_data">Error, revisa los datos.</string>
    <string name="new_lead_success">Tu lead ha sido creado.</string>
    <string name="new_lead_creating_error">Error al crear lead: </string>
    <string name="dialog_categories_title">Categorías</string>
    <string name="dialog_categories_btn_ok">Aceptar</string>
    <string name="dialog_categories_btn_cancel">Cancelar</string>
    <string name="dialog_categories_btn_neutral">Todas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
